--- a/StatLearning/6.Subset.ipynb
+++ b/StatLearning/6.Subset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "       'Student', 'Married', 'Ethnicity', 'Balance'], dtype=object)"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "3                           0                1                    0  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 449,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score:0.9382 Adj R2 Score:0.9237\n"
+      "R2 Score:0.9520 Adj R2 Score:0.9407\n"
      ]
     }
    ],
@@ -259,24 +259,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error:9987.4705 R2 Score:0.9130 Adj R2 Score:0.8927\n"
+      "Cross-Validation Error:10176.0901 R2 Score:0.9517 Adj R2 Score:0.9499\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score,cross_val_predict\n",
-    "score = cross_val_score(LinearRegression(),X=X_train,y=y_train,cv=5,scoring ='neg_mean_squared_error')\n",
-    "y_pred = cross_val_predict(LinearRegression(), X_test, y_test, cv=5)\n",
+    "model = LinearRegression()\n",
+    "score = cross_val_score(model,X=X,y=y,cv=5,scoring ='neg_mean_squared_error')\n",
+    "y_pred = cross_val_predict(model, X, y, cv=5)\n",
     "from sklearn.metrics import r2_score\n",
-    "r2 =r2_score(y_test, y_pred)\n",
-    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X_test.shape[0],X_test.shape[1]):.4f}\")"
+    "r2 =r2_score(y, y_pred)\n",
+    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X.shape[0],X.shape[1]):.4f}\")"
    ]
   },
   {
@@ -288,25 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error:9807.4042 R2 Score:0.9264 Adj R2 Score:0.9092\n"
+      "Cross-Validation Error:10100.2198 R2 Score:0.9521 Adj R2 Score:0.9502\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import cross_val_score,cross_val_predict\n",
     "loo = LeaveOneOut()\n",
-    "score = cross_val_score(LinearRegression(),X=X_train,y=y_train,cv=loo,scoring='neg_mean_squared_error')\n",
-    "y_pred = cross_val_predict(LinearRegression(), X_test, y_test, cv=loo)\n",
+    "model = LinearRegression()\n",
+    "score = cross_val_score(model,X=X,y=y,cv=loo,scoring='neg_mean_squared_error')\n",
+    "y_pred = cross_val_predict(model, X, y, cv=loo)\n",
     "from sklearn.metrics import r2_score\n",
-    "r2 =r2_score(y_test, y_pred)\n",
-    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X_test.shape[0],X_test.shape[1]):.4f}\")"
+    "r2 =r2_score(y, y_pred)\n",
+    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X.shape[0],X.shape[1]):.4f}\")"
    ]
   },
   {
@@ -318,19 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_score(X_train,y_train):\n",
+    "def calculate_score(X,y):\n",
     "    from sklearn.model_selection import cross_val_score,cross_val_predict\n",
-    "    score = cross_val_score(LinearRegression(),X=X_train,y=y_train,cv=5,scoring ='neg_mean_squared_error')\n",
+    "    score = cross_val_score(LinearRegression(),X=X,y=y,cv=5,scoring ='neg_mean_squared_error')\n",
     "    return abs(score.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +347,7 @@
     "    for combo in itertools.combinations(remaining_features,1):\n",
     "        score = 0       \n",
     "        features.append(combo[0])\n",
-    "        score = calculate_score(X_train[:,features],y_train)\n",
+    "        score = calculate_score(X[:,features],y)\n",
     "        features.remove(combo[0])\n",
     "        \n",
     "        if  score < best_RSS:\n",
@@ -361,16 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Rating', 'Income', 'Student_No', 'Limit', 'Cards', 'Age'], dtype='object')"
+       "Index(['Rating', 'Income', 'Gender_Male', 'Limit', 'Cards', 'Age',\n",
+       "       'Student_No'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 458,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,22 +386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error:9804.6953 R2 Score:0.9231 Adj R2 Score:0.9050\n"
+      "Cross-Validation Error:9957.2382 R2 Score:0.9528 Adj R2 Score:0.9509\n"
      ]
     }
    ],
    "source": [
-    "y_pred = cross_val_predict(LinearRegression(), X_test[:,result], y_test, cv=5)\n",
+    "y_pred = cross_val_predict(LinearRegression(), X[:,result], y, cv=5)\n",
     "from sklearn.metrics import r2_score\n",
-    "r2 =r2_score(y_test, y_pred)\n",
-    "print(f\"Cross-Validation Error:{abs(min(RSS_list)):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X_test.shape[0],X_test.shape[1]):.4f}\")"
+    "r2 =r2_score(y, y_pred)\n",
+    "print(f\"Cross-Validation Error:{abs(min(RSS_list)):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X.shape[0],X.shape[1]):.4f}\")"
    ]
   },
   {
@@ -409,25 +413,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 460,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model\n",
+    "scores_list = []\n",
+    "lambdas = [0.05,0.1,0.2,0.5,1]\n",
+    "for l in lambdas:\n",
+    "    reg = linear_model.Ridge(alpha=l)\n",
+    "    score = cross_val_score(reg,X=X,y=y,cv=5,scoring='neg_mean_squared_error')\n",
+    "    scores_list.append(abs(score.mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 461,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = lambdas[scores_list.index(min(scores_list))]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error:9945.2057 R2 Score:0.9088 Adj R2 Score:0.8875\n"
+      "Cross-Validation Error:10140.2521 R2 Score:0.9519 Adj R2 Score:0.9501\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import linear_model\n",
-    "reg = linear_model.Ridge(alpha=.5)\n",
-    "score = cross_val_score(reg,X=X_train,y=y_train,cv=5,scoring='neg_mean_squared_error')\n",
-    "y_pred = cross_val_predict(reg, X_test, y_test, cv=5)\n",
+    "reg = linear_model.Ridge(alpha=l)\n",
+    "y_pred = cross_val_predict(reg, X, y, cv=5)\n",
     "from sklearn.metrics import r2_score\n",
-    "r2 =r2_score(y_test, y_pred)\n",
-    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X_test.shape[0],X_test.shape[1]):.4f}\")"
+    "r2 =r2_score(y, y_pred)\n",
+    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X.shape[0],X.shape[1]):.4f}\")"
    ]
   },
   {
@@ -439,25 +477,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 463,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model\n",
+    "scores_list = []\n",
+    "lambdas = [0.05,0.1,0.2,0.5,1]\n",
+    "for l in lambdas:\n",
+    "    reg = linear_model.Lasso(alpha=l)\n",
+    "    score = cross_val_score(reg,X=X,y=y,cv=5,scoring='neg_mean_squared_error')\n",
+    "    scores_list.append(abs(score.mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 464,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = lambdas[scores_list.index(min(scores_list))]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error:10006.4138 R2 Score:0.9132 Adj R2 Score:0.8928\n"
+      "Cross-Validation Error:10128.5030 R2 Score:0.9520 Adj R2 Score:0.9501\n"
      ]
     }
    ],
    "source": [
     "from sklearn import linear_model\n",
-    "reg = linear_model.Lasso(alpha=0.1)\n",
-    "score = cross_val_score(reg,X=X_train,y=y_train,cv=5,scoring='neg_mean_squared_error')\n",
-    "y_pred = cross_val_predict(reg, X_test, y_test, cv=5)\n",
+    "reg = linear_model.Lasso(alpha=l)\n",
+    "score = cross_val_score(reg,X=X,y=y,cv=5,scoring='neg_mean_squared_error')\n",
+    "y_pred = cross_val_predict(reg, X, y, cv=5)\n",
     "from sklearn.metrics import r2_score\n",
-    "r2 =r2_score(y_test, y_pred)\n",
-    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X_test.shape[0],X_test.shape[1]):.4f}\")"
+    "r2 =r2_score(y, y_pred)\n",
+    "print(f\"Cross-Validation Error:{abs(score.mean()):.4f} R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,X.shape[0],X.shape[1]):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 469,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.17690773, 0.15318589, 0.1395602 , 0.13024282, 0.10961377])"
+      ]
+     },
+     "execution_count": 469,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components=5)\n",
+    "principalComponents = pca.fit_transform(X_train)\n",
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = LinearRegression()\n",
+    "model.fit(pca.transform(X_train),y_train)\n",
+    "y_pred = model.predict(pca.transform(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score:0.9520 Adj R2 Score:0.9487\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "rs= r2_score(y_test, y_pred)\n",
+    "print(f\"R2 Score:{r2:.4f} Adj R2 Score:{adj_r2(r2,pca.transform(X_test).shape[0],pca.transform(X_test).shape[1]):.4f}\")"
    ]
   }
  ],
