--- a/pytorch/2.ipynb
+++ b/pytorch/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(x,w,b):\n",
+    "    return x @ w.t() + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gd(weight,bias,inputs,targets,epochs=1000):\n",
     "    for i in range(epochs):\n",
-    "        preds = model(inputs)\n",
+    "        preds = model(inputs,weight,bias)\n",
     "        loss = mse(preds, targets)\n",
     "        loss.backward()\n",
     "        with torch.no_grad():\n",
@@ -86,13 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "tensor([[-1.1643, -2.1830,  0.4433],\n        [ 0.4144, -1.1673,  2.6518]], requires_grad=True)\ntensor([0.9168, 0.1356], requires_grad=True)\n"
+     "text": "tensor([[ 0.6703, -0.0974, -0.0182],\n        [ 0.2507,  0.9366,  1.5468]], requires_grad=True)\ntensor([-1.7200, -0.2902], requires_grad=True)\n"
     }
    ],
    "source": [
@@ -104,13 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "tensor(11.4644, grad_fn=<DivBackward0>)\ntensor([[ 57.1482,  69.9754],\n        [ 83.5531, 103.6294],\n        [115.6616, 126.7650],\n        [ 20.2215,  35.2806],\n        [104.9464, 125.3218]], grad_fn=<AddBackward0>)\ntensor([[ 56.,  70.],\n        [ 81., 101.],\n        [119., 133.],\n        [ 22.,  37.],\n        [103., 119.]])\n"
+     "text": "tensor(1.3949, grad_fn=<DivBackward0>)\ntensor([[ 56.9669,  70.1916],\n        [ 81.6304, 101.2677],\n        [120.3175, 131.7873],\n        [ 21.5614,  36.6915],\n        [100.2973, 120.3074]], grad_fn=<AddBackward0>)\ntensor([[ 56.,  70.],\n        [ 81., 101.],\n        [119., 133.],\n        [ 22.,  37.],\n        [103., 119.]])\n"
     }
    ],
    "source": [
@@ -118,6 +134,264 @@
     "print(loss)\n",
     "print(preds)\n",
     "print(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = np.array([[73, 67, 43], [91, 88, 64], [87, 134, 58], \n",
+    "                   [102, 43, 37], [69, 96, 70], [73, 67, 43], \n",
+    "                   [91, 88, 64], [87, 134, 58], [102, 43, 37], \n",
+    "                   [69, 96, 70], [73, 67, 43], [91, 88, 64], \n",
+    "                   [87, 134, 58], [102, 43, 37], [69, 96, 70]], \n",
+    "                  dtype='float32')\n",
+    "\n",
+    "# Targets (apples, oranges)\n",
+    "targets = np.array([[56, 70], [81, 101], [119, 133], \n",
+    "                    [22, 37], [103, 119], [56, 70], \n",
+    "                    [81, 101], [119, 133], [22, 37], \n",
+    "                    [103, 119], [56, 70], [81, 101], \n",
+    "                    [119, 133], [22, 37], [103, 119]], \n",
+    "                   dtype='float32')\n",
+    "\n",
+    "inputs = torch.from_numpy(inputs)\n",
+    "targets = torch.from_numpy(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(tensor([[ 73.,  67.,  43.],\n         [ 91.,  88.,  64.],\n         [ 87., 134.,  58.]]),\n tensor([[ 56.,  70.],\n         [ 81., 101.],\n         [119., 133.]]))"
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "from torch.utils.data import TensorDataset\n",
+    "train_ds = TensorDataset(inputs, targets)\n",
+    "train_ds[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader\n",
+    "batch_size = 5\n",
+    "train_dl = DataLoader(train_ds, batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "tensor([[ 91.,  88.,  64.],\n        [ 91.,  88.,  64.],\n        [102.,  43.,  37.],\n        [ 73.,  67.,  43.],\n        [ 87., 134.,  58.]])\ntensor([[ 81., 101.],\n        [ 81., 101.],\n        [ 22.,  37.],\n        [ 56.,  70.],\n        [119., 133.]])\n"
+    }
+   ],
+   "source": [
+    "for xb, yb in train_dl:\n",
+    "    print(xb)\n",
+    "    print(yb)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Parameter containing:\ntensor([[-0.3055, -0.2505,  0.4709],\n        [-0.3795, -0.4975,  0.3869]], requires_grad=True)\nParameter containing:\ntensor([ 0.4789, -0.3132], requires_grad=True)\n"
+    }
+   ],
+   "source": [
+    "model = nn.Linear(3, 2)\n",
+    "print(model.weight)\n",
+    "print(model.bias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[Parameter containing:\n tensor([[-0.3055, -0.2505,  0.4709],\n         [-0.3795, -0.4975,  0.3869]], requires_grad=True),\n Parameter containing:\n tensor([ 0.4789, -0.3132], requires_grad=True)]"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
+   "source": [
+    "list(model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[-18.3576, -44.7093],\n        [-19.2286, -53.8624],\n        [-32.3570, -77.5493],\n        [-24.0279, -46.0958],\n        [-11.6877, -47.1727],\n        [-18.3576, -44.7093],\n        [-19.2286, -53.8624],\n        [-32.3570, -77.5493],\n        [-24.0279, -46.0958],\n        [-11.6877, -47.1727],\n        [-18.3576, -44.7093],\n        [-19.2286, -53.8624],\n        [-32.3570, -77.5493],\n        [-24.0279, -46.0958],\n        [-11.6877, -47.1727]], grad_fn=<AddmmBackward>)"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "preds = model(inputs)\n",
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "tensor(16974.5488, grad_fn=<MseLossBackward>)\n"
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "loss_fn = F.mse_loss\n",
+    "loss = loss_fn(model(inputs), targets)\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = torch.optim.SGD(model.parameters(), lr=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit(num_epochs, model, loss_fn, opt, train_dl):\n",
+    "    \n",
+    "    # Repeat for given number of epochs\n",
+    "    for epoch in range(num_epochs):\n",
+    "        \n",
+    "        # Train with batches of data\n",
+    "        for xb,yb in train_dl:\n",
+    "            \n",
+    "            # 1. Generate predictions\n",
+    "            pred = model(xb)\n",
+    "            \n",
+    "            # 2. Calculate loss\n",
+    "            loss = loss_fn(pred, yb)\n",
+    "            \n",
+    "            # 3. Compute gradients\n",
+    "            loss.backward()\n",
+    "            \n",
+    "            # 4. Update parameters using gradients\n",
+    "            opt.step()\n",
+    "            \n",
+    "            # 5. Reset the gradients to zero\n",
+    "            opt.zero_grad()\n",
+    "        \n",
+    "        # Print the progress\n",
+    "        if epoch+1 == num_epochs:\n",
+    "            print('Epoch [{}/{}], Loss: {:.4f}'.format(epoch+1, num_epochs, loss.item()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Epoch [200/200], Loss: 0.9829\n"
+    }
+   ],
+   "source": [
+    "fit(200, model, loss_fn, opt, train_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[ 57.3204,  70.3854],\n        [ 82.9779, 100.8081],\n        [116.8385, 132.4710],\n        [ 21.4682,  37.8083],\n        [103.1199, 118.8576],\n        [ 57.3204,  70.3854],\n        [ 82.9779, 100.8081],\n        [116.8385, 132.4710],\n        [ 21.4682,  37.8083],\n        [103.1199, 118.8576],\n        [ 57.3204,  70.3854],\n        [ 82.9779, 100.8081],\n        [116.8385, 132.4710],\n        [ 21.4682,  37.8083],\n        [103.1199, 118.8576]], grad_fn=<AddmmBackward>)"
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "preds = model(inputs)\n",
+    "preds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[ 56.,  70.],\n        [ 81., 101.],\n        [119., 133.],\n        [ 22.,  37.],\n        [103., 119.],\n        [ 56.,  70.],\n        [ 81., 101.],\n        [119., 133.],\n        [ 22.,  37.],\n        [103., 119.],\n        [ 56.,  70.],\n        [ 81., 101.],\n        [119., 133.],\n        [ 22.,  37.],\n        [103., 119.]])"
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "targets"
    ]
   }
  ],
