News Prediction hackathon

--- a/hackathons/PowerPlant.ipynb
+++ b/hackathons/PowerPlant.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_result_and_print_score(boost,save=False)"
+    "save_result_and_print_score(gbm,save=False)"
    ]
   }
  ]
