Credit scoring with xgboost

--- a/zoomcamp/credit_scoring.ipynb
+++ b/zoomcamp/credit_scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4     107       0     0     310    910  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "max    99999999.0  5000.0  11140.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "max    11140.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "Name: status, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "DecisionTreeClassifier(max_depth=2)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -767,12 +767,12 @@
       "   2 -> 0.669\n",
       "   3 -> 0.739\n",
       "   4 -> 0.761\n",
-      "   5 -> 0.767\n",
-      "   6 -> 0.758\n",
-      "  10 -> 0.699\n",
+      "   5 -> 0.766\n",
+      "   6 -> 0.761\n",
+      "  10 -> 0.702\n",
       "  15 -> 0.660\n",
-      "  20 -> 0.653\n",
-      "None -> 0.644\n"
+      "  20 -> 0.659\n",
+      "None -> 0.654\n"
      ]
     }
    ],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -805,20 +805,20 @@
       "200 -> 0.747\n",
       "\n",
       "depth: 5\n",
-      "1 -> 0.767\n",
+      "1 -> 0.766\n",
       "5 -> 0.768\n",
       "10 -> 0.762\n",
       "15 -> 0.772\n",
       "20 -> 0.774\n",
-      "50 -> 0.768\n",
+      "50 -> 0.767\n",
       "100 -> 0.763\n",
       "200 -> 0.759\n",
       "\n",
       "depth: 6\n",
-      "1 -> 0.762\n",
-      "5 -> 0.762\n",
+      "1 -> 0.748\n",
+      "5 -> 0.759\n",
       "10 -> 0.778\n",
-      "15 -> 0.785\n",
+      "15 -> 0.786\n",
       "20 -> 0.774\n",
       "50 -> 0.770\n",
       "100 -> 0.776\n",
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "DecisionTreeClassifier(max_depth=6, min_samples_leaf=15)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "0.7811145285897654"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -934,16 +934,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1345e4198>]"
+       "[<matplotlib.lines.Line2D at 0x130e763c8>]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1063,16 +1063,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x13471e8d0>"
+       "<matplotlib.legend.Legend at 0x130f66c50>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1167,16 +1167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1347a86d8>"
+       "<matplotlib.legend.Legend at 0x130ff3940>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1224,15 +1224,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtrain = xgb.DMatrix(X_train, label=y_train, feature_names=dv.feature_names_) \n",
+    "dval = xgb.DMatrix(X_val, label=y_val, feature_names=dv.feature_names_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_params = { \n",
+    "    'eta': 0.3, \n",
+    "    'max_depth': 6, \n",
+    "    'min_child_weight': 1, \n",
+    "    'objective': 'binary:logistic', \n",
+    "    'nthread': 8, \n",
+    "    'seed': 1,\n",
+    "    'eval_metric':'logloss'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8152745150274878"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = xgb.train(xgb_params, dtrain, num_boost_round=10)\n",
+    "y_pred = model.predict(dval)\n",
+    "roc_auc_score(y_val, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-auc:0.77424\tval-auc:0.73571\n",
+      "[10]\ttrain-auc:0.84733\tval-auc:0.78964\n",
+      "[20]\ttrain-auc:0.86359\tval-auc:0.80617\n",
+      "[30]\ttrain-auc:0.87855\tval-auc:0.81478\n",
+      "[40]\ttrain-auc:0.88701\tval-auc:0.81990\n",
+      "[50]\ttrain-auc:0.89458\tval-auc:0.82595\n",
+      "[60]\ttrain-auc:0.90159\tval-auc:0.82807\n",
+      "[70]\ttrain-auc:0.90650\tval-auc:0.82801\n",
+      "[80]\ttrain-auc:0.91110\tval-auc:0.82940\n",
+      "[90]\ttrain-auc:0.91428\tval-auc:0.82997\n",
+      "[99]\ttrain-auc:0.91766\tval-auc:0.83192\n"
+     ]
+    }
+   ],
+   "source": [
+    "watchlist = [(dtrain, 'train'), (dval, 'val')]\n",
+    "xgb_params = { \n",
+    "    'eta': 0.1, \n",
+    "    'max_depth': 3, \n",
+    "    'min_child_weight': 1, \n",
+    "    'objective': 'binary:logistic', \n",
+    "    'eval_metric': 'auc', #A \n",
+    "    'nthread': 8, \n",
+    "    'seed': 1\n",
+    "} \n",
+    "model = xgb.train(xgb_params, dtrain, \n",
+    "                  num_boost_round=100, \n",
+    "                  evals=watchlist, verbose_eval=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = (df_train_full.status == 'default').values \n",
+    "y_test = (df_test.status == 'default').values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_train_full['status'] \n",
+    "del df_test['status'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_train = df_train_full.fillna(0).to_dict(orient='records') \n",
+    "dict_test = df_test.fillna(0).to_dict(orient='records') \n",
+    "\n",
+    "dv = DictVectorizer(sparse=False) \n",
+    "X_train = dv.fit_transform(dict_train) \n",
+    "X_test = dv.transform(dict_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16:15:13] WARNING: /Users/travis/build/dmlc/xgboost/src/learner.cc:573: \n",
+      "Parameters: { \"silent\" } might not be used.\n",
+      "\n",
+      "  This may not be accurate due to some parameters are only used in language bindings but\n",
+      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+      "  verification. Please open an issue if you find above cases.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dtrain = xgb.DMatrix(X_train, label=y_train, feature_names=dv.feature_names_) \n",
+    "dtest = xgb.DMatrix(X_test, label=y_test, feature_names=dv.feature_names_) \n",
+    "\n",
+    "xgb_params = { \n",
+    "    'eta': 0.1, \n",
+    "    'max_depth': 3, \n",
+    "    'min_child_weight': 1, \n",
+    "    'objective': 'binary:logistic', \n",
+    "    'eval_metric': 'auc', \n",
+    "    'nthread': 8, \n",
+    "    'seed': 1, \n",
+    "    'silent': 1 \n",
+    "} \n",
+    "\n",
+    "num_trees = 160 \n",
+    "\n",
+    "model = xgb.train(xgb_params, dtrain, num_boost_round=num_trees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8322845901959826"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_xgb = model.predict(dtest) \n",
+    "roc_auc_score(y_test, y_pred_xgb) "
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "032e6b68352af7a9d31f1c560e1cfd25faca2010be9f0048d061b6c28be7f41e"
+   "hash": "617bf394921dbd6af35dc5cfda7f4af7a0c9007e1d933aa7c31edcd475e7a382"
   },
   "kernelspec": {
    "display_name": "Python 3.6.8 64-bit",
