--- a/zoomcamp/midterm/model.ipynb
+++ b/zoomcamp/midterm/model.ipynb
@@ -306,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8361560113437465"
+       "0.8240403784300743"
       ]
      },
      "execution_count": 7,
@@ -333,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "{'model__max_depth': 10, 'model__n_estimators': 50, 'pca__n_components': 25}"
+       "{'model__max_depth': None, 'model__n_estimators': 50, 'pca__n_components': 25}"
       ]
      },
      "execution_count": 8,
@@ -353,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8331466510875025"
+       "0.8311793732898434"
       ]
      },
      "execution_count": 9,
@@ -463,7 +463,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8318558809359388"
+       "0.8403431984677224"
       ]
      },
      "execution_count": 13,
@@ -504,7 +504,7 @@
     {
      "data": {
       "text/plain": [
-       "array([153878.])"
+       "array([159697.])"
       ]
      },
      "execution_count": 15,
@@ -519,7 +519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
